--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "primeng": "^4.0.0-rc.3",
     "rxjs": "^5.1.0",
+    "tinymce": "^4.5.6",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
